# good-fences-rs-core

./: .beachball.js  .beachballrc.json  .gitignore  .npmignore  .yarnrc.yml  CHANGELOG.json  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  good-fences.js  index.d.ts  package-lock.json  package.json  rust-toolchain.toml  test.mjs  token  unused.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  zshrc.zsh
.persist/: .gitignore  README.md
__test__/: index.js  index.spec.mjs
change/: @good-fences-api-030587f5-d1cd-41ae-b155-14710a5fe812.json  @good-fences-api-0596ce17-9105-4394-83a1-ffb3cce67733.json  @good-fences-api-0e4ef024-a32b-4faa-a002-c007116eb92a.json  @good-fences-api-0e7b8ffa-fb92-4421-9d67-9c7fcfd4fd7b.json  @good-fences-api-0f6279b9-8b8a-4bab-8016-be7b09527870.json  @good-fences-api-144caee8-8d20-4404-9140-1c481de6e396.json  @good-fences-api-1546b19c-4903-4575-bc49-0f8a2c53fc04.json  @good-fences-api-1688bbb6-6fb1-4785-88c4-3f8019b62cf1.json  @good-fences-api-1bc7e62e-1e94-41ee-8dfd-720c4d05d496.json  @good-fences-api-1fc813f4-e065-49a3-aef1-90fd29a2ba8d.json  @good-fences-api-240a05d7-f96f-4500-8ac6-41e1fced05d1.json  @good-fences-api-25393e65-ad19-41b0-b063-65866f42f765.json  @good-fences-api-2dc2fc9c-d313-4d4a-8eb2-252b3dc2767b.json  @good-fences-api-2dc2fc9c-d313-4d4a-8eb2-252b3dc2767c.json  @good-fences-api-2dc2fc9c-d313-4d4a-8eb2-252b3dc2767d.json  @good-fences-api-2ef2baf0-acef-4d90-819c-54d8ca06c798.json  @good-fences-api-328dc0fa-0536-4c3a-9493-1d6a97612afc.json  @good-fences-api-34261dd2-e7f4-40b5-9591-11246e99ebfb.json  @good-fences-api-3d7239f4-35da-4b5e-a018-b6a75f71358e.json  @good-fences-api-4355169b-fb47-4e09-a2a9-a0c5895d5064.json  @good-fences-api-4e664734-3ce1-4052-857c-79c232484fda.json  @good-fences-api-5a2b5160-385b-486d-aac9-b8b3a519a284.json  @good-fences-api-5d6cb165-1214-4a7d-aca8-f1cf100d7c5d.json  @good-fences-api-5fde8ba3-6d25-4e27-8ff0-a4cc760714db.json  @good-fences-api-67c8e574-b15f-4542-a781-4b625f530df0.json  @good-fences-api-683e20b4-b5bc-4f1c-8225-b553b5a2ac67.json  @good-fences-api-685a4676-87d6-4f73-93a1-96d6dcebceae.json  @good-fences-api-698f3225-6a54-4d98-9ca7-cb02dd4d325a.json  @good-fences-api-6b49ca98-d490-41f8-aec9-5192b33eb6a3.json  @good-fences-api-6bc9f76d-d8af-4d48-b3da-da84b4109cc8.json  @good-fences-api-6c696660-0b84-426a-b838-398dda540094.json  (+57 more)
crates/ahashmap/: Cargo.toml
crates/ahashmap/src/: lib.rs
crates/ast_name_tracker/: Cargo.toml
crates/ast_name_tracker/src/: lib.rs  visitor.rs
crates/ast_segmenter/: Cargo.toml
crates/ast_segmenter/src/: import_expr_visitor.rs  lib.rs  visitor.rs
crates/deadlock_ref/: Cargo.toml  README.md
crates/deadlock_ref/src/: deadlock.rs  lib.rs  prelude.rs
crates/ftree_cache/: Cargo.toml
crates/ftree_cache/src/: context_data.rs  lib.rs
crates/good_fences/: Cargo.toml
crates/good_fences/src/: evaluate_fences.rs  fence.rs  fence_collection.rs  file_extension.rs  good_fences_runner.rs  lib.rs  walk_dirs.rs
crates/good_fences/src/error/: mod.rs
crates/good_fences/src/get_imports/: import_path_visitor.rs  mod.rs
crates/good_fences/src/js_unused_finder/: mod.rs
crates/good_fences/src/unused_finder_napi/: mod.rs
crates/good_fences/tests/good_fences_integration/src/componentA/: helperA1.ts
crates/good_fences/tests/good_fences_integration/src/componentB/someDeep/componentA/: fence.json
crates/good_fences/tests/good_fences_integration/src/componentC/: fence.json
crates/good_fences/tests/good_fences_integration/src/parseError/: parseError.ts
crates/good_fences/tests/walk_dir_simple/: rootFile.ts
crates/good_fences/tests/walk_dir_simple/subdir/: subDirFile.ts
crates/good_fences/tests/walk_dir_simple/subdir/subsubdir/: fence.json
crates/good_fences_napi/: Cargo.toml
crates/good_fences_napi/src/: lib.rs
crates/import_resolver/: Cargo.toml
crates/import_resolver/src/: lib.rs  manual_resolver.rs  resolver.rs  swc_resolver.rs  tsconfig_paths.rs
crates/import_resolver/src/swc_resolver/: combined_resolver.rs  common.rs  context_data.rs  exported_path.rs  internal_resolver.rs  mod.rs  node_resolver.rs  package.rs  pkgjson_exports.rs  pkgjson_rewrites.rs  tsconfig.rs  tsconfig_resolver.rs
crates/import_resolver/src/swc_resolver/util/: mod.rs  pkgname.rs  to_absolute_path.rs
crates/js_err/: Cargo.toml
crates/js_err/src/: lib.rs
crates/js_err_napi/: Cargo.toml
crates/js_err_napi/src/: lib.rs
crates/logger_console/: Cargo.toml
crates/logger_console/src/: lib.rs
crates/napi_root/: Cargo.toml  README.md
crates/napi_root/src/: lib.rs
crates/packagejson/: Cargo.toml
crates/packagejson/src/: exported_path.rs  lib.rs  packagejson.rs
crates/packagejson_exports/: Cargo.toml
crates/packagejson_exports/src/: lib.rs
crates/patch_vfs/: Cargo.toml
crates/patch_vfs/src/: format.rs  lib.rs
crates/repo-health/: Cargo.toml  README.md
crates/repo-health/src/: devcontainers_are_equivalent.rs  dockerfile_matches_rust_version.rs  lib.rs
crates/repo-schemas/: Cargo.toml
crates/repo-schemas/src/: lib.rs  schemas_up_to_date.rs
crates/swc_utils/: Cargo.toml
crates/swc_utils/src/: lib.rs
crates/swc_utils_print/: Cargo.toml
crates/swc_utils_print/src/: lib.rs
crates/unused_bin/: Cargo.toml  build.rs
crates/unused_bin/src/: lib.rs  main.rs
crates/unused_finder/: Cargo.toml
crates/unused_finder/src/: api.rs  cfg.rs  core.rs  export_collector_tests.rs  fixer.rs  graph.rs  ignore_file.rs  import_export_info.rs  lib.rs  logger.rs  node_visitor.rs  report.rs  tag.rs  test.rs  throttled_async_map.rs  unused_finder.rs  unused_finder_visitor_runner.rs  utils.rs  walk.rs  walked_file.rs
crates/unused_finder/src/cfg/: mod.rs  package_match_rules.rs
crates/unused_finder/src/parse/: data.rs  export_collector_tests.rs  exports_visitor.rs  exports_visitor_runner.rs  exports_visitor_tests.rs  mod.rs  node_visitor.rs
crates/unused_finder/tests/unused_finder/src/: foo.ts  unimported.ts
crates/unused_finder_napi/: Cargo.toml
crates/unused_finder_napi/src/: lib.rs
lldb/: README.md  collections.py  glob.py  slice.py  (+5 more)
(+99 files in other folders)
