[package]
name = "good_fences"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
anyhow.workspace = true
jwalk.workspace = true
lazy_static = "1.4.0"
serde_derive = "1.0.117"
void = "1.0.2"
relative-path = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
pathdiff = "0.2.0"
text-diff = "0.4.0"
rayon = { workspace = true }
path-slash = "0.2.1"
path-clean = "0.1.0"
swc_ecma_parser.workspace = true
swc_core.workspace = true
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
js_err = { path = "../js_err" }

import_resolver = { path = "../import_resolver" }
path_utils = { path = "../path_utils" }
tsconfig_paths = { path = "../tsconfig_paths" }
swc_utils = { path = "../swc_utils" }
