[package]
name = "import_resolver"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0.117"
serde_bytes = "0.11.5"
serde.workspace = true
serde_json.workspace = true
glob = "0.3.0"
swc_core.workspace = true
swc_ecma_parser.workspace = true
swc.workspace = true
swc_ecma_loader.workspace = true
anyhow = { workspace = true }
thiserror.workspace = true
tracing-test.workspace = true
path_utils = { path = "../path_utils" }
tsconfig_paths = { path = "../tsconfig_paths" }
path-clean = { workspace = true }
path-slash = { workspace = true }
relative-path = { workspace = true }
lazy_static = "1.4.0"
pretty_assertions.workspace = true
swc_common.workspace = true
pathdiff = "0.2.1"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
dashmap = "6.0.1"
tracing = "0.1.40"
test_tmpdir = { path = "../test_tmpdir" }
ouroboros = "0.18.4"
copy_from_str = "1.0.6"
hashbrown = "0.14.5"
