[package]
name = "import_resolver"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
copy_from_str = "1.0.6"
dashmap = "6.0.1"
ftree_cache ={ path="../ftree_cache"}
hashbrown = "0.14.5"
lazy_static = "1.4.0"
ouroboros = "0.18.4"
parking_lot.workspace = true
path-clean = { workspace = true }
path-slash = { workspace = true }
pathdiff = "0.2.1"
pretty_assertions.workspace = true
relative-path = { workspace = true }
serde_derive = "1.0.117"
serde_json.workspace = true
serde.workspace = true
swc_common.workspace = true
swc_core.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_parser.workspace = true
test_tmpdir = { path = "../test_tmpdir" }
thiserror.workspace = true
tracing = "0.1.40"
tracing-test.workspace = true
tsconfig_paths = { path = "../tsconfig_paths" }
serde_with = "3.9.0"
