[package]
name = "import_resolver"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
dashmap = "6.0.1"
ftree_cache = { path = "../ftree_cache" }
hashbrown = "0.14.5"
lazy_static = "1.4.0"
ouroboros = "0.18.4"
parking_lot.workspace = true
path-clean = { workspace = true }
path-slash = { workspace = true }
pathdiff = "0.2.1"
relative-path = { workspace = true }
packagejson = { path = "../packagejson" }
packagejson_exports = { path = "../packagejson_exports" }
serde_derive = "1.0.117"
serde_json.workspace = true
serde.workspace = true
swc_common.workspace = true
swc_core.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_parser.workspace = true
thiserror.workspace = true
tracing = "0.1.40"
tsconfig_paths = { path = "../tsconfig_paths" }
abspath = { path = "../abspath" }

[dev-dependencies]
tracing-test.workspace = true
test_tmpdir = { path = "../test_tmpdir" }
pretty_assertions.workspace = true

[target.'cfg(windows)'.dependencies]
normpath = "1.3.0"
