[package]
name = "js_err"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
napi = {optional = true, workspace = true}
anyhow.workspace = true

[build-dependencies]
napi-build = "2.0.1"

[features]
default = []
napi = ["dep:napi"]
