
[package]
name = "napi_root"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"
description = "Napi entrypoint for the workspace"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
napi.workspace = true
js_err = { path = "../js_err" }
js_err_napi = { version = "0.2.0", path = "../js_err_napi" }
good_fences_napi = { version = "0.2.0", path = "../good_fences_napi" }
unused_finder_napi = { version = "0.2.0", path = "../unused_finder_napi" }

[build-dependencies]
napi-build = "2.0.1"
