[package]
name = "packagejson_exports"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
hashbrown = "0.14.5"
ahashmap = { path = "../ahashmap" }
path-clean = { workspace = true }
path-slash = { workspace = true }
packagejson = { path = "../packagejson" }
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
test_tmpdir = { path = "../test_tmpdir" }
