[package]
name = "patch_vfs"
description = "Virtual filesystem that applies patches to files at runtime"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
vfs = "0.12.0"
pretty_assertions.workspace = true
diffy = "0.4.0"
ouroboros = "0.18.4"
