[package]
name = "repo-schemas"
version = "0.0.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
license = "Apache-2.0"
description = """
Crate for introspective tests on this repo's schemas
"""
edition = "2018"

[dev-dependencies]
dockerfile-parser = "0.8.0"
path-slash.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
repo-root = { path = "../repo-root" }
serde-hjson = { version = "1.1.0", features = [] }
toml = "0.8.19"
schemars.workspace = true
serde_json.workspace = true
unused_finder = { version = "0.2.0", path = "../unused_finder" }
