[package]
name = "normalize_src"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_compiler_base.workspace = true
swc_utils_parse = { path = "../swc_utils_parse" }

[dev-dependencies]
pretty_assertions.workspace = true
