
[package]
name = "unused_finder"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
glob = "0.3.1"
swc_utils = { path = "../swc_utils" }
import_resolver = { path = "../import_resolver" }
tsconfig_paths = { path = "../tsconfig_paths" }
js_err = { path = "../js_err" }
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
path-slash.workspace = true
jwalk.workspace = true
serde.workspace = true
serde_json.workspace = true
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
maplit = "1.0.2"
swc_core.workspace = true
swc_ecma_parser.workspace = true
swc.workspace = true
pretty_assertions.workspace = true

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
