
[package]
name = "unused_finder"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
glob = "0.3.1"
import_resolver = { path = "../import_resolver" }
js_err = { path = "../js_err" }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
path-slash.workspace = true
pretty_assertions.workspace = true
rayon.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
swc_core.workspace = true
swc_ecma_parser.workspace = true
swc_utils = { path = "../swc_utils" }
swc.workspace = true
thiserror.workspace = true
tsconfig_paths = { path = "../tsconfig_paths" }
packagejson = { path = "../packagejson" }
packagejson_exports = { path = "../packagejson_exports" }
path-clean.workspace = true
pathdiff = "0.2.1"
const_format = "0.2.33"
ahashmap = { path = "../ahashmap" }
bitflags = "2.6.0"
ignore = "0.4.23"
abspath = { version = "0.2.0", path = "../abspath" }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dev-dependencies]
stringreader = "0.1.1"
test_tmpdir = { path = "../test_tmpdir" }
