
[package]
name = "unused_finder"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
glob = "0.3.1"
import_resolver = { path = "../import_resolver" }
js_err = { path = "../js_err" }
path-slash.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_visit.workspace = true
swc_ecma_transforms.workspace = true
swc_utils_parse = { path = "../swc_utils_parse" }
thiserror.workspace = true
tsconfig_paths = { path = "../tsconfig_paths" }
packagejson = { path = "../packagejson" }
packagejson_exports = { path = "../packagejson_exports" }
path-clean.workspace = true
pathdiff = "0.2.1"
const_format = "0.2.33"
ahashmap = { path = "../ahashmap" }
bitflags = "2.6.0"
ignore = "0.4.23"
abspath = { version = "0.2.0", path = "../abspath" }
itertools = "0.13.0"
debug_print = "1.0.0"
schemars.workspace = true
logger = { version = "0.2.0", path = "../logger" }

[dev-dependencies]
stringreader = "0.1.1"
test_tmpdir = { path = "../test_tmpdir" }
pretty_assertions.workspace = true
