
[package]
name = "unused_finder_napi"
version = "0.2.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"
description = "Napi implementation for `unused_finder`"

[lib]
crate-type = ["lib"]

[dependencies]
napi.workspace = true
js_err = { path = "../js_err" }
anyhow.workspace = true
napi-derive.workspace = true
unused_finder = { version = "0.2.0", path = "../unused_finder" }
serde.workspace = true
js_err_napi = { version = "0.2.0", path = "../js_err_napi" }

[build-dependencies]
napi-build = "2.0.1"
